@@ -98,6 +98,7 @@ GtkWidget *display_tilp_dbox()
 
 	label_wnd.label21 = glade_xml_get_widget(xml, "label26");
 	label_wnd.label22 = glade_xml_get_widget(xml, "label24");
+	label_wnd.label23 = glade_xml_get_widget(xml, "label29");
 
 	toolbar_wnd.toolbar = glade_xml_get_widget(xml, "toolbar2");
 	toolbar_wnd.button10 = glade_xml_get_widget(xml, "button1");
