@@ -2,6 +2,10 @@ SubVersion: $Id$
 
 Log of changes:	tilp (cables, calcs, files, ticonv)
 
+- 06/05/2006, version 0.11 (0.0.7, 0.1.1, 0.1.2, 0.0.3): roms
+	- added a new label which display FLASH free/used
+	- show more levels in the current path
+
 - 15/04/2006, version 0.10 (0.0.7, 0.1.0, 0.1.2, 0.0.3): roms
 	- follows ticalcs2 changes in the API
 	- added Titanium USB hand-held support
